--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
-                <button href="#" class="profile__edit-button"></button>
+                <button class="profile__edit-button"></button>
                 <button class="profile__add-button"></button>
             </section>
             <section class="elements">
@@ -72,7 +72,7 @@
                 <div class="popup__container">
                     <div class="popup__content">
                         <p class="popup__title">Редактировать профиль</p>
-                        <form action="" class="popup__form">
+                        <form class="popup__form">
                             <input class="popup__name" type="text">
                             <input class="popup__job" type="text">
                             <button class="popup__save-button">Сохранить</button>
