--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img class="profile__image" src="images/avatar.jpg" alt="avatar">
+                <img class="profile__image" src="images/avatar.jpg" alt="аватар">
                 <div class="profile__text">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
