--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main class="content">
             <section class="profile">
-                <img class="profile__image" src="images/avatar.jpg" alt="аватар">
+                <img class="profile__image" src="./images/avatar.jpg" alt="аватар">
                 <div class="profile__text">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
@@ -26,42 +26,42 @@
             </section>
             <section class="elements">
                 <div class="element">
-                    <img class="element__image" src="images/karachevsk.jpg" alt="Карачевск">
+                    <img class="element__image" src="./images/karachevsk.jpg" alt="Карачевск">
                     <div class="element__container">
                         <h2 class="element__title">Карачевск</h2>
                         <button class="element__like-button"></button>
                     </div>
                 </div>
                 <div class="element">
-                    <img class="element__image" src="images/elbrus.jpg" alt="Гора Эльбрус">
+                    <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
                     <div class="element__container">
                         <h2 class="element__title">Гора Эльбрус</h2>
                         <button class="element__like-button"></button>
                     </div>
                 </div>
                 <div class="element">
-                    <img class="element__image" src="images/dombay.jpg" alt="Домбай">
+                    <img class="element__image" src="./images/dombay.jpg" alt="Домбай">
                     <div class="element__container">
                         <h2 class="element__title">Домбай</h2>
                         <button class="element__like-button"></button>
                     </div>
                 </div>
                 <div class="element">
-                    <img class="element__image" src="images/elbrus.jpg" alt="Гора Эльбрус">
+                    <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
                     <div class="element__container">
                         <h2 class="element__title">Гора Эльбрус</h2>
                         <button class="element__like-button"></button>
                     </div>
                 </div>
                 <div class="element">
-                    <img class="element__image" src="images/dombay.jpg" alt="Домбай">
+                    <img class="element__image" src="./images/dombay.jpg" alt="Домбай">
                     <div class="element__container">
                         <h2 class="element__title">Домбай</h2>
                         <button class="element__like-button"></button>
                     </div>
                 </div>
                 <div class="element">
-                    <img class="element__image" src="images/karachevsk.jpg" alt="Карачаево-Ч...">
+                    <img class="element__image" src="./images/karachevsk.jpg" alt="Карачаево-Ч...">
                     <div class="element__container">
                         <h2 class="element__title">Карачаево-Ч...</h2>
                         <button class="element__like-button"></button>
@@ -86,7 +86,7 @@
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
     </div>
-    <script src="/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
