--- a/index.html
+++ b/index.html
@@ -21,70 +21,68 @@
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
                 </div>
-                <button class="profile__edit-button"></button>
-                <button class="profile__add-button"></button>
+                <button type="button" class="profile__edit-button"></button>
+                <button type="button" class="profile__add-button"></button>
             </section>
             <section class="elements">
-                <div class="element">
+                <article class="element">
                     <img class="element__image" src="./images/karachevsk.jpg" alt="Карачевск">
                     <div class="element__container">
                         <h2 class="element__title">Карачевск</h2>
-                        <button class="element__like-button"></button>
+                        <button type="button" class="element__like-button"></button>
                     </div>
-                </div>
-                <div class="element">
+                </article>
+                <article class="element">
                     <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
                     <div class="element__container">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__like-button"></button>
+                        <button type="button" class="element__like-button"></button>
                     </div>
-                </div>
-                <div class="element">
+                </article>
+                <article class="element">
                     <img class="element__image" src="./images/dombay.jpg" alt="Домбай">
                     <div class="element__container">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="element__like-button"></button>
+                        <button type="button" class="element__like-button"></button>
                     </div>
-                </div>
-                <div class="element">
+                </article>
+                <article class="element">
                     <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
                     <div class="element__container">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__like-button"></button>
+                        <button type="button" class="element__like-button"></button>
                     </div>
-                </div>
-                <div class="element">
+                </article>
+                <article class="element">
                     <img class="element__image" src="./images/dombay.jpg" alt="Домбай">
                     <div class="element__container">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="element__like-button"></button>
+                        <button type="button" class="element__like-button"></button>
                     </div>
-                </div>
-                <div class="element">
+                </article>
+                <article class="element">
                     <img class="element__image" src="./images/karachevsk.jpg" alt="Карачаево-Ч...">
                     <div class="element__container">
                         <h2 class="element__title">Карачаево-Ч...</h2>
-                        <button class="element__like-button"></button>
+                        <button type="button" class="element__like-button"></button>
                     </div>
-                </div>
+                </article>
             </section>
-            <div class="popup">
-                <div class="popup__container">
-                    <div class="popup__content">
-                        <p class="popup__title">Редактировать профиль</p>
-                        <form class="popup__form">
-                            <input class="popup__name" type="text">
-                            <input class="popup__job" type="text">
-                            <button class="popup__save-button">Сохранить</button>
-                        </form>
-                        <button class="popup__close-button"></button>
-                    </div>
-                </div>
-            </div>
         </main>
         <footer class="footer">
             <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
         </footer>
+        <div class="popup">
+            <div class="popup__container">
+                <button type="button" class="popup__close-button"></button>
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <form name="form" class="popup__form">
+                    <input name="profile-name" class="popup__input popup__input_type_name" type="text">
+                    <input name="profile-job" class="popup__input popup__input_type_job" type="text">
+                    <button type="submit" class="popup__save-button">Сохранить</button>
+                </form>
+            </div>
+        </div>
     </div>
     <script src="scripts/script.js"></script>
 </body>
