feat: добавлен новый функционал

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="popup popup_type_open-image">
             <div class="popup__box">
                 <button type="button" class="popup__close-button popup__close-button_type_open-image"></button>
-                <img class="popup__image" alt="фото" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/OPORTO%2C_PORTUGAL_%2816938430809%29.jpg/816px-OPORTO%2C_PORTUGAL_%2816938430809%29.jpg">
+                <img class="popup__image" alt="фото" src="#">
                 <p class="popup__subtitle"></p>
             </div>
 
