--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </section>
         </main>
         <footer class="footer">
-            <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+            <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
         </footer>
         <div class="popup popup_type_info">
             <div class="popup__container">
@@ -105,8 +105,17 @@
                 <img class="popup__image" alt="фото" src="#">
                 <p class="popup__subtitle"></p>
             </div>
-
         </div>
+        <template class="template">
+            <article class="element">
+                <img class="element__image" src="#" alt="#">
+                <button type="button" class="element__delete-button"></button>
+                <div class="element__container">
+                    <h2 class="element__title"></h2>
+                    <button type="button" class="element__like-button"></button>
+                </div>
+            </article>
+        </template>
     </div>
     <script src="scripts/script.js"></script>
 </body>
