--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
             <div class="popup__container">
                 <button type="button" class="popup__close-button popup__close-button_type_edit"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form name="form" class="popup__form popup__form_type_edit">
-                    <input name="profile-name" class="popup__input popup__input_type_name" type="text">
-                    <input name="profile-job" class="popup__input popup__input_type_job" type="text">
+                <form name="editForm" class="popup__form popup__form_type_edit" novalidate>
+                    <label class="popup__label">
+                        <input name="profile-name" id="name-input" class="popup__input popup__input_type_name"
+                            type="text" minlength="2" maxlength="40" required>
+                        <span class="name-input-error popup__error-text"></span>
+                    </label>
+                    <label class="popup__label">
+                        <input name="profile-job" id="job-input" class="popup__input popup__input_type_job" type="text"
+                            minlength="2" maxlength="200" required>
+                        <span class="job-input-error popup__error-text"></span>
+                    </label>
                     <button type="submit" class="popup__save-button">Сохранить</button>
                 </form>
             </div>
@@ -44,10 +52,18 @@
             <div class="popup__container">
                 <button type="button" class="popup__close-button popup__close-button_type_add"></button>
                 <h2 class="popup__title">Новое место</h2>
-                <form name="form" class="popup__form popup__form_type_add">
-                    <input name="profile-name" class="popup__input popup__input_type_title" type="text" placeholder="Название">
-                    <input name="profile-job" class="popup__input popup__input_type_photo" type="text" placeholder="Ссылка на картинку">
-                    <button type="submit" class="popup__save-button">Создать</button>
+                <form name="addForm" class="popup__form popup__form_type_add" novalidate>
+                    <label class="popup__label">
+                        <input name="profile-name" id="title-input" class="popup__input popup__input_type_title"
+                            type="text" placeholder="Название" minlength="2" maxlength="30" required>
+                        <span class="title-input-error popup__error-text"></span>
+                    </label>
+                    <label class="popup__label">
+                        <input name="profile-job" id="url-input" class="popup__input popup__input_type_photo" type="url"
+                            placeholder="Ссылка на картинку" required>
+                        <span class="url-input-error popup__error-text"></span>
+                    </label>
+                    <button type="submit" id="submit2" class="popup__save-button popup__save-button_status_inactive" disabled>Создать</button>
                 </form>
             </div>
         </div>
@@ -70,6 +86,7 @@
         </template>
     </div>
     <script src="scripts/script.js"></script>
+    <script src="scripts/validate.js"></script>
 </body>
 
 </html>
