--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             </article>
         </template>
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/cards.js"></script>
+    <script src="scripts/index.js"></script>
     <script src="scripts/validate.js"></script>
 </body>
 
