--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p class="popup__subtitle"></p>
             </div>
         </div>
-        <template class="template">
+        <template class="template" id="element__template">
             <article class="element">
                 <img class="element__image" src="#" alt="#">
                 <button type="button" class="element__delete-button"></button>
@@ -85,9 +85,7 @@
             </article>
         </template>
     </div>
-    <script src="scripts/cards.js"></script>
-    <script src="scripts/index.js"></script>
-    <script src="scripts/validate.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
