--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                         <span class="name-input-error popup__error-text"></span>
                     </label>
                     <label class="popup__label">
-                        <input name="profile-job" id="job-input" class="popup__input popup__input_type_job" type="text"
+                        <input name="job" id="job-input" class="popup__input popup__input_type_job" type="text"
                             minlength="2" maxlength="200" required>
                         <span class="job-input-error popup__error-text"></span>
                     </label>
@@ -53,12 +53,12 @@
                 <h2 class="popup__title">Новое место</h2>
                 <form name="addForm" class="popup__form popup__form_type_add" novalidate>
                     <label class="popup__label">
-                        <input name="profile-name" id="title-input" class="popup__input popup__input_type_title"
+                        <input name="name" id="title-input" class="popup__input popup__input_type_title"
                             type="text" placeholder="Название" minlength="2" maxlength="30" required>
                         <span class="title-input-error popup__error-text"></span>
                     </label>
                     <label class="popup__label">
-                        <input name="profile-job" id="url-input" class="popup__input popup__input_type_photo" type="url"
+                        <input name="link" id="url-input" class="popup__input popup__input_type_photo" type="url"
                             placeholder="Ссылка на картинку" required>
                         <span class="url-input-error popup__error-text"></span>
                     </label>
