--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form name="editForm" class="popup__form popup__form_type_edit" novalidate>
                     <label class="popup__label">
-                        <input name="profile-name" id="name-input" class="popup__input popup__input_type_name"
+                        <input name="name" id="name-input" class="popup__input popup__input_type_name"
                             type="text" minlength="2" maxlength="40" required>
                         <span class="name-input-error popup__error-text"></span>
                     </label>
