--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <main class="content">
             <section class="profile">
                 <img class="profile__image" src="<%=require('./images/avatar.jpg')%>" alt="аватар">
+                <div class="profile__avatar-button"></div>
                 <div class="profile__text">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
                     <p class="profile__subtitle">Исследователь океана</p>
@@ -28,18 +29,21 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
         </footer>
+
+        <!--  ПОПАП ИНФА ПРОФИЛЯ -->
+
         <div class="popup popup_type_info">
             <div class="popup__container">
                 <button type="button" class="popup__close-button popup__close-button_type_edit"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form name="editForm" class="popup__form popup__form_type_edit" novalidate>
                     <label class="popup__label">
-                        <input name="name" id="name-input" class="popup__input popup__input_type_name"
+                        <input name="username" id="name-input" class="popup__input popup__input_type_name"
                             type="text" minlength="2" maxlength="40" required>
                         <span class="name-input-error popup__error-text"></span>
                     </label>
                     <label class="popup__label">
-                        <input name="job" id="job-input" class="popup__input popup__input_type_job" type="text"
+                        <input name="userjob" id="job-input" class="popup__input popup__input_type_job" type="text"
                             minlength="2" maxlength="200" required>
                         <span class="job-input-error popup__error-text"></span>
                     </label>
@@ -47,6 +51,31 @@
                 </form>
             </div>
         </div>
+
+        <!-- /////////////////////////////////// -->
+
+        <!-- ПОПАП АВАТАР -->
+
+        <div class="popup popup_type_avatar">
+            <div class="popup__container">
+                <button type="button" class="popup__close-button popup__close-button_type_edit"></button>
+                <h2 class="popup__title">Обновить аватар</h2>
+                <form name="avatarForm" class="popup__form popup__form_type_avatar" novalidate>
+                    <label class="popup__label">
+                        <input name="avatar" id="url-input" class="popup__input popup__input_type_photo" type="url"
+                            placeholder="Ссылка на картинку" required>
+                        <span class="url-input-error popup__error-text"></span>
+                    </label>
+                    <button type="submit" class="popup__save-button">Сохранить</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- /////////////////////////////////// -->
+
+
+        <!--  ПОПАП ДОБАВИТЬ ФОТО -->
+
         <div class="popup popup_type_photo">
             <div class="popup__container">
                 <button type="button" class="popup__close-button popup__close-button_type_add"></button>
@@ -66,6 +95,11 @@
                 </form>
             </div>
         </div>
+
+        <!-- /////////////////////////////////// -->
+
+        <!--  ПОПАП ОТКРЫТАЯ ФОТО -->
+
         <div class="popup popup_type_open-image">
             <div class="popup__box">
                 <button type="button" class="popup__close-button popup__close-button_type_open-image"></button>
@@ -73,13 +107,33 @@
                 <p class="popup__subtitle"></p>
             </div>
         </div>
+
+        <!-- /////////////////////////////////// -->
+
+        <!--  ПОПАП УДАЛЕНИЕ -->
+
+        <div class="popup popup_type_delete">
+            <div class="popup__container">
+                <button type="button" class="popup__close-button popup__close-button_type_add"></button>
+                <h2 class="popup__title">Вы уверены?</h2>
+                <form name="deleteForm" class="popup__form popup__form_type_delete" novalidate>
+                    <button type="submit" id="submit2" class="popup__save-button" disabled>Да</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- /////////////////////////////////// -->
+
         <template class="template" id="element__template">
             <article class="element">
                 <img class="element__image" src="#" alt="#">
                 <button type="button" class="element__delete-button"></button>
                 <div class="element__container">
                     <h2 class="element__title"></h2>
+                    <div class="element__like-container">
                     <button type="button" class="element__like-button"></button>
+                    <span class="element__like-nubmer"></span>
+                    </div>
                 </div>
             </article>
         </template>
