--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
                     <h2 class="element__title"></h2>
                     <div class="element__like-container">
                     <button type="button" class="element__like-button"></button>
-                    <span class="element__like-nubmer"></span>
+                    <span class="element__like-number"></span>
                     </div>
                 </div>
             </article>
