--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                 <h2 class="popup__title">Обновить аватар</h2>
                 <form name="avatarForm" class="popup__form popup__form_type_avatar" novalidate>
                     <label class="popup__label">
-                        <input name="avatar" id="url-input" class="popup__input popup__input_type_photo" type="url"
+                        <input name="avatar" id="url-input1" class="popup__input popup__input_type_photo" type="url"
                             placeholder="Ссылка на картинку" required>
                         <span class="url-input-error popup__error-text"></span>
                     </label>
@@ -117,7 +117,7 @@
                 <button type="button" class="popup__close-button popup__close-button_type_add"></button>
                 <h2 class="popup__title">Вы уверены?</h2>
                 <form name="deleteForm" class="popup__form popup__form_type_delete" novalidate>
-                    <button type="submit" id="submit2" class="popup__save-button" disabled>Да</button>
+                    <button type="submit" id="submit3" class="popup__save-button" disabled>Да</button>
                 </form>
             </div>
         </div>
