--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,12 @@
                 <form name="editForm" class="popup__form popup__form_type_edit" novalidate>
                     <label class="popup__label">
                         <input name="username" id="name-input" class="popup__input popup__input_type_name"
-                            type="text" minlength="2" maxlength="40" required>
+                            type="text" minlength="2" maxlength="40" required placeholder="Имя">
                         <span class="name-input-error popup__error-text"></span>
                     </label>
                     <label class="popup__label">
                         <input name="userjob" id="job-input" class="popup__input popup__input_type_job" type="text"
-                            minlength="2" maxlength="200" required>
+                            minlength="2" maxlength="200" required placeholder="О себе">
                         <span class="job-input-error popup__error-text"></span>
                     </label>
                     <button type="submit" class="popup__save-button">Сохранить</button>
@@ -64,7 +64,7 @@
                     <label class="popup__label">
                         <input name="avatar" id="url-input1" class="popup__input popup__input_type_photo" type="url"
                             placeholder="Ссылка на картинку" required>
-                        <span class="url-input-error popup__error-text"></span>
+                        <span class="url-input1-error popup__error-text"></span>
                     </label>
                     <button type="submit" class="popup__save-button">Сохранить</button>
                 </form>
@@ -116,8 +116,8 @@
             <div class="popup__container">
                 <button type="button" class="popup__close-button popup__close-button_type_add"></button>
                 <h2 class="popup__title">Вы уверены?</h2>
-                <form name="deleteForm" class="popup__form popup__form_type_delete" novalidate>
-                    <button type="submit" id="submit3" class="popup__save-button" disabled>Да</button>
+                <form name="deleteForm" action="#" class="popup__form popup__form_type_delete" novalidate>
+                    <button type="submit" id="submit3" class="popup__save-button">Да</button>
                 </form>
             </div>
         </div>
